fix(scrollbars): fix scrollbars mixin corner bg color

--- a/src/framework/theme/styles/core/_mixins.scss
+++ b/src/framework/theme/styles/core/_mixins.scss
@@ -20,6 +20,10 @@
     background: $bg;
   }
 
+  &::-webkit-scrollbar-corner {
+    background-color: $bg;
+  }
+
   // TODO: remove
   // For Internet Explorer
   scrollbar-face-color: $fg;
